[package]
name = "game-test"
version = "0.1.0"
authors = ["Your Name <slagoonisdune@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
wasm-bindgen = {version = "0.2.79", features = ["serde-serialize"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }


js-sys = "0.3.56"
specs = {version = "0.17.0", features = ["specs-derive"] }
#shred = "0.12.0" # For thing
rapier3d = { version = "0.11.1", features = ["wasm-bindgen"] }
nalgebra = "0.29.0"
parry3d = "*"

serde = { verson = "1.0117", features = ["derive"] }

#specs-physics = "0.3.0"
#stdweb = "0.4.20"
#specs-hierarchy = "0.6.0"



[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
